fix(responsive): fix navbar bottom on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@ html, body {
 
 #root {
     height: 100vh;
+    max-height: 100vh !important;
     display: flex !important;
     flex-direction: column !important;
 }
